--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -5,6 +5,7 @@
     top:0px;
     left: 0px;
     position: fixed;
+    box-shadow: 0px 6.2px  6px -6px rgba(0,0,0,0.2);/* sombreado no lado inferior da div*/
    }
 
    .tec1{
@@ -122,13 +123,15 @@
     color:#575757;
     font-size: 16px;
     line-height: 28px;
-    
-
+  }
+  h1{
+    color:black;
   }
  
   figure{
     background-color:#f6f8fa; 
   }
+   /*barra autor*/
   .barra_autor{/* borda inferor da barra*/
     border-bottom: 1px solid;
     border-color:rgb(188, 197, 206) ;
@@ -141,12 +144,15 @@
     padding-right: 3px;
     
   }
-  .image_perfil{ /* borada da imagem do perfil */
+  .image_perfil{ /* borda da imagem do perfil */
     border:solid 1px;
     border-color: lightgray;
     border-radius:360px;
-    
+    margin-top: -9px;
+    padding: 2px;
+
   }
+ 
   .editor_name{
     float:left;
     
@@ -156,23 +162,100 @@
     line-height: 7px;
     
   }
+   /*modificação 07/04/ inserção de compartilhar*/
+   .shared{/* modificado imagem de compartilhamento*/
+    float:right;
+    margin-top:-32px;
+    margin-right: 5px;
+}
+
+.shared_image{
+  float:left;
+  margin-top:-8px;
+}
+
+
+.shared_text{
+  float:left;
+  color:#030303;
+  font: 14px "Source Sans Pro", sans-serif;
+  font-weight: 560;
+
+}
+.comentario{
+  float: right;
+  margin-left: 8px;
+  margin-top: -2px;
+
+}
+.comentario:hover{
+  color: #1087ff;
+
+  
+}
+.comment_image{
+  float:left;
+  margin-top:-2px;
+  
+}
+   /*modificado 07/04 inserção compartilhar*/
+   /* barra autor*/
+ 
   .data{
     font-size: 14px;
     line-height: 20px;
     color:rgba(82,82,82,.5);
   }
 .artigo{
-  width: 900px; 
+  width:90%; 
   background-color:white; 
   margin: -20px auto 0px auto;
   padding:  15px ;/*conteudo interno, todo o conteudo sera ajeitado a 15px tanto a direita como esquerda , em cima e embaixo*/
  
 }
- 
- 
+/*botões fonte*/
+.fonte{
+  margin:15px;
+}
+.fonte p{
+  font-weight: bold;
+}
+button{
+  background-color: white;
+  border: solid 1px;
+  border-color: darkgray;
+  border-radius: 5px;
+  color:#444;
+  padding: 3px 8px;
+  margin-right: 8px;
+  margin-top:8px;
+}
+/*botões categoria*/
+.categoria{
+  margin:15px;
 
- 
- 
+}
 
+.categoria button{
+  border-color:#1087ff;
+  color:#1087ff;
+}
+.categoria p{
+  font-weight:bold;
+}
+.categoria a{
+  text-decoration:none;
+}
+.fonte a{
+  text-decoration: none;
+}
+/*link de botões*/
+.link_button:hover{
+  background-color: white ;
+}
+#comments p{
+   color:black;
+   font-size: 24px;;
+   font-weight: bold;
+}
 
-   
