--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -1,11 +1,34 @@
+
+.delimeter{
+  float: none;
+}
 .barra{
     background-color:white;
     height: 115px;
     width: 100%;
     top:0px;
     left: 0px;
+    position: sticky;
+
+   }
+
+
+    .barra2{
+    background-color:white;
+    height: 57.5px;
+    width: 100%;
+    top:0;
     position: fixed;
-    box-shadow: 0px 6.2px  6px -6px rgba(0,0,0,0.2);/* sombreado no lado inferior da div*/
+    box-shadow: 0px 6.2px  6px -6px rgba(0,0,0,0.2);
+    
+   }
+
+   .barra2_filho{
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50%;
+    left: 56px;
+
    }
 
    .tec1{
@@ -37,9 +60,6 @@
      position: relative;
    }
 
-   .logo:hover{
-    background-image:url(img/log2.jpg);
-  }
 
    .voltar{
      background-color: white;
@@ -94,16 +114,19 @@
   @media only screen and (max-width: 600px){
     body{width: 100%;}
     img{width: 100%;}
+    
   }
 
   @media only screen and (max-width: 770px){
     body{width: 100%;}
     img{width: 100%;}
+    
   }
 
   @media only screen and (max-width: 992px){
     body{width: 100%;}
     img{width: 100%;}
+    
   }
 
   @media only screen and (max-width: 1200px){
