--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -25,6 +25,38 @@
     
    }
 
+   .save_image{
+    position: absolute;
+    border: none;
+    bottom: 50%;
+    transform: translateY(50%);
+    right:56px;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+    text-align: center;
+    color: black;
+   }
+
+   .save_image:hover{
+     color: #0a9eff;
+   }
+
+   .img_share{
+    position: absolute;
+    border: none;
+    bottom: 50%;
+    transform: translateY(50%);
+    right:100px;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+    text-align: center;
+    color: black;
+   }
+  
+
+
    .barra2_filho{
     position: absolute;
     transform: translateY(-50%);
