--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -111,6 +111,11 @@
     background-color: rgba(0,0,0,.06); 
     border-radius: 50%;
    }
+   .voltar:active{
+    border: solid 3px;
+    border-radius: 50%;
+    border-color:rgba(52,144,220,.5);
+  }
 
    .button_back:hover{
     background-color: rgba(0,0,0,0);
@@ -135,6 +140,13 @@
     right: 1px;
     
   }
+
+.search:active{
+  border: solid 3px;
+  border-radius: 50%;
+  border-color:rgba(52,144,220,.5);
+ }
+
 
   .search:hover{
     border-radius: 50%;
@@ -248,10 +260,7 @@
   color: #0a9eff;
   
 }
- .comment button :focus{/* não funciona por causa do link*/
-  color: #0a9eff;
-  
-}
+
 .comment button:hover{
   color: #0a9eff;
 }
@@ -278,7 +287,6 @@
     display: inline-block;
     position: relative;
     top:-5px;
-    /*color:#030303;* deixa aqui*/
     font: 14px "Source Sans Pro", sans-serif;
     font-weight:normal;
   
@@ -312,7 +320,7 @@
     color:rgba(82,82,82,.5);
   }
 .artigo{
-  width:90%; 
+  width:90%;
   background-color:white; 
   margin: -20px auto 0px auto;
   padding:  15px ;/*conteudo interno, todo o conteudo sera ajeitado a 15px tanto a direita como esquerda , em cima e embaixo*/
@@ -334,6 +342,9 @@ button{
   padding: 3px 8px;
   margin-right: 8px;
   margin-top:8px;
+}
+button:focus{
+  border: 0;
 }
 /*botões categoria*/
 .categoria{
@@ -358,9 +369,40 @@ button{
 .link_button:hover{
   background-color: white ;
 }
-#comments p{
+ .comentario {
    color:black;
-   font-size: 24px;;
+   font-size: 24px;
    font-weight: bold;
 }
+ .comments_text{
+  color: #030303;
+  margin:0px;
+  font-size: 15px;
+  text-align: center;
+}
+.reaction{
+  display: inline-block;
+
+}
+
+.reactions button{
+  margin: 5px 6px 10px;
+  padding: 5px 10px;
+}
+.reactions button:active{
+  color: #0a9eff;
+}
+.reaction_text{
+  position:relative;
+  bottom: 7px;
+  color: #2a2e2e;
+  font-family: "Helvetica Neue",arial,sans-serif;
+  font-size: 15px;
+  margin-left: 8px;
+}
+.reactions{
+ text-align: center;
+}
+
+
 
