--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -31,8 +31,8 @@
     bottom: 50%;
     transform: translateY(50%);
     right:56px;
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
     cursor: pointer;
     text-align: center;
     color: black;
@@ -42,18 +42,35 @@
      color: #0a9eff;
    }
 
+   .save_image:active{
+    border:  solid 2px;
+    border-color:  #1087FF;
+   }
+
    .img_share{
     position: absolute;
     border: none;
     bottom: 50%;
     transform: translateY(50%);
     right:100px;
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
     cursor: pointer;
     text-align: center;
     color: black;
    }
+
+
+   .img_share:active{
+    border:  solid 2px;
+    border-color:  #1087FF;
+  }
+
+   .img_share:hover{
+    color: #1087FF;
+   }
+
+
   
 
 
@@ -81,17 +98,29 @@
 
    .tec1:hover{
       color: rgb(31, 159, 238);
-     
    }
   
    
    
    .logo{
-     float: left;
+     top:0.5px;
      height:27px ;
      width: 32px;
      bottom: 3px;
-     position: relative;
+     left:0px;
+     position: absolute;
+   }
+
+   .logo:hover{
+     opacity: 0%;
+   }
+
+   .logo_act{
+     left: 0px;
+     height:27px;
+     width: 32px;
+     bottom: 6px;
+     float: left;
    }
 
 
@@ -115,6 +144,7 @@
     border: solid 3px;
     border-radius: 50%;
     border-color:rgba(52,144,220,.5);
+    
   }
 
    .button_back:hover{
@@ -134,10 +164,13 @@
     
   }
   .lup{
-    position: relative;
+    position: absolute;
     line-height: 100%;
-    top:5px;
-    right: 1px;
+    top:0px;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
+    margin:auto;
     
   }
 
@@ -320,6 +353,7 @@
     color:rgba(82,82,82,.5);
   }
 .artigo{
+  float: none;
   width:90%;
   background-color:white; 
   margin: -20px auto 0px auto;
