--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -1,8 +1,7 @@
-﻿
-.delimeter{
+﻿.delimeter{/* delimitador da barra com a logo*/
   float: none;
 }
-.barra{
+.barra{ /*barra com a logo*/
     background-color:white;
     height: 115px;
     width: 100%;
@@ -14,74 +13,7 @@
    }
 
 
-    .barra2{
-    background-color:white;
-    height: 57.5px;
-    width: 100%;
-    top:0;
-    position: fixed;
-    box-shadow: 0px 6.2px  6px -6px rgba(0,0,0,0.2);
-    z-index: 1;
-    
-   }
-
-   .save_image{
-    position: absolute;
-    border: none;
-    bottom: 50%;
-    transform: translateY(50%);
-    right:56px;
-    height: 25px;
-    width: 25px;
-    cursor: pointer;
-    text-align: center;
-    color: black;
-   }
-
-   .save_image:hover{
-     color: #0a9eff;
-   }
-
-   .save_image:active{
-    border:  solid 2px;
-    border-color:  #1087FF;
-   }
-
-   .img_share{
-    position: absolute;
-    border: none;
-    bottom: 50%;
-    transform: translateY(50%);
-    right:100px;
-    height: 25px;
-    width: 25px;
-    cursor: pointer;
-    text-align: center;
-    color: black;
-   }
-
-
-   .img_share:active{
-    border:  solid 2px;
-    border-color:  #1087FF;
-  }
-
-   .img_share:hover{
-    color: #1087FF;
-   }
-
-
-  
-
-
-   .barra2_filho{
-    position: absolute;
-    transform: translateY(-50%);
-    top: 50%;
-    left: 56px;
-
-   }
-
+   
    .tec1{
      color: #1087FF;
      position: absolute;
@@ -134,6 +66,7 @@
      width: 35px;
      text-align: center;
      line-height: 50%;
+     box-sizing: border-box;
    }
 
    .voltar:hover{
@@ -142,7 +75,6 @@
    }
    .voltar:active{
     border: solid 3px;
-    border-radius: 50%;
     border-color:rgba(52,144,220,.5);
     
   }
@@ -161,6 +93,7 @@
     width: 35px;
     text-align: center;
     line-height: 50%;
+    box-sizing: border-box;
     
   }
   .lup{
@@ -176,8 +109,9 @@
 
 .search:active{
   border: solid 3px;
-  border-radius: 50%;
   border-color:rgba(52,144,220,.5);
+  
+  
  }
 
 
@@ -186,33 +120,83 @@
     background-color: rgba(0,0,0,.06);
 
   }
+  /*Fim da Barra com a logo-----------------------------------------------------------------------------------------*/
+
+  .barra2{/* barra para substituir a barra com a logo a partir da barra_autor*/
+    background-color:white;
+    height: 57.5px;
+    width: 100%;
+    top:0;
+    position: fixed;
+    box-shadow: 0px 6.2px  6px -6px rgba(0,0,0,0.2);
+    z-index: 1;
+    
+   }
+
+   .save_image{
+    position: absolute;
+    border: none;
+    bottom: 50%;
+    transform: translateY(50%);
+    right:56px;
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+    text-align: center;
+    color: black;
+    box-sizing: border-box;
+   }
+
+   .save_image:hover{
+     color: #0a9eff;
+   }
+
+   .save_image:active{
+    border:  solid 2px;
+    border-color:  #1087FF;
+    
+   }
+
+   .img_share{
+    position: absolute;
+    border: none;
+    bottom: 50%;
+    transform: translateY(50%);
+    right:100px;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+    text-align: center;
+    color: black;
+    box-sizing: border-box;
+    
+   }
+
+
+   .img_share:active{
+    border: solid 2px;
+    border-color:  rgb(82, 164, 245);
+    
+  }
+
+   .img_share:hover{
+    color: #1087FF;
+   }
 
   
+  
+   .barra2_filho{
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50%;
+    left: 56px;
+
+   }
+   /*Fim da Barra2--------------------------------------------------------------------------------------------------*/
 
 
-  @media only screen and (max-width: 600px){
-    body{width: 100%;}
-    img{width: 100%;}
-    
-  }
 
-  @media only screen and (max-width: 770px){
-    body{width: 100%;}
-    img{width: 100%;}
-    
-  }
-
-  @media only screen and (max-width: 992px){
-    body{width: 100%;}
-    img{width: 100%;}
-    
-  }
-
-  @media only screen and (max-width: 1200px){
-    body{width: 100%;}
-    img{width: 100%;}
-  }
-
+  /*Personalização das tags a, body, h1, figure*/
   a:hover{ 
     background-color:rgba(10,158,255,.1);
 
@@ -241,12 +225,16 @@
     padding: 16px;
     margin:0px;
   }
+  /*Fim da personalização----------------------------------------------------------------------------------------*/
+
+
    /*barra autor*/
    .barra_autor{/* borda inferor da barra*/
     border-bottom: 1px solid;
     border-color:rgb(188, 197, 206) ;
     margin-top: -5px;
     overflow: hidden/*recupera a altura e comprimento perdido pelo float*/;
+    
   } 
   .perfil_autor{
     float :left;
@@ -341,25 +329,40 @@
 
 
 .share{
-   float:right;
+   float: right;
    margin-right: 1%;
+   text-align: center;
+   transform: translateY(5%);
+}
+
+
+
+.share button{
+  border:none;
+  color:black;
+}
+
+.share button:hover{
+  color:#0a9eff;
 }
 
 .share_image{
     display: inline-block;
     position: relative;
     top: 7px;
+    transform: translateY(-28%);
 }
 .share_text{
     display: inline-block;
     position: relative;
-    top: 2px;
-    color:#030303;
+    transform: translateY(-18%);
+    right:0px;
     font: 14px "Source Sans Pro", sans-serif;
     font-weight: normal;
+
 }
    /*modificado 07/04 inserção compartilhar*/
-   /* barra autor*/
+   /*Fim do barra autor-------------------------------------------------------------------------------------------------*/
  
   .data{
     font-size: 14px;
@@ -409,7 +412,6 @@ button{
   border: solid 1px;
   border-radius: 5px;
   border-color: darkgray;
-  border-radius: 5px;
   color:#444;
   padding: 3px 8px;
   margin-right: 8px;
@@ -434,6 +436,8 @@ button{
   text-align: center;
 
 }
+/*Fim de botões categoria ---------------------------------------------------------------------------------------------*/
+
 /*botões de reações*/
 .reaction{
   display: inline-block;
@@ -444,7 +448,11 @@ button{
   margin: 5px 6px 10px;
   padding: 5px 10px;
   color: #2a2e2e;
+  box-sizing: border-box;
+  
 }
+
+
 
 .reaction_text{
   position:relative;
@@ -455,6 +463,7 @@ button{
 }
 .reactions{
  text-align: center;
+ 
 }
 .btn-secondary:focus{
   color: #0a9eff;
@@ -465,14 +474,48 @@ button{
   height: 20px;
 }
 .btn-secondary img:hover{
-  animation: mymove 2s infinite;
+  animation: mymove 2s infinite; 
+}
+
+.reactions button:active
+{
   
+  border-color:  #0a9eff; 
 }
 @keyframes mymove {
   from {transform:scale(1,1)}
   to {transform:scale(1.5,1.5)}
 }
+/*Fim dos botões de reação----------------------------------------------------------------------------------------------*/
 
 
+/*Medias para deixar o site responsivo*/
+@media only screen and (max-width: 600px){
+  body{width: 100%;}
+  img{width: 100%;}
+  div{width: 100%;}
+  
+}
+
+@media only screen and (max-width: 770px){
+  body{width: 100%;}
+  img{width: 100%;}
+  div{width: 100%;}
+  
+}
+
+@media only screen and (max-width: 992px){
+  body{width: 100%;}
+  img{width: 100%;}
+  div{width: 100%;}
+  
+}
+
+@media only screen and (max-width: 1200px){
+  body{width: 100%;}
+  img{width: 100%;}
+  div{width: 100%;}
+}
 
 
+/*Fim do medias------------------------------------------------------------------------------------------------*/
