--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -1,4 +1,4 @@
-﻿.delimeter{/* delimitador da barra com a logo*/
+﻿﻿.delimeter{/* delimitador da barra com a logo*/
   float: none;
 }
 .barra{ /*barra com a logo*/
@@ -502,7 +502,16 @@ button{
   to {transform:scale(1.5,1.5)}
 }
 /*Fim dos botões de reação----------------------------------------------------------------------------------------------*/
-/* Itens de comentário abaixo das reações*/
+/* Itens de comentário 1, abaixo das reações  */
+.comentarios{
+  
+  border-bottom: solid 2px #e7e9ee;
+  white-space: nowrap;
+  height: auto;
+  overflow: visible;
+  margin:0px 0px 24px;
+
+}
 .comentarios-tecmundo{
   padding: 10px;
   display: inline-block;
@@ -511,6 +520,9 @@ button{
   font:15px "Helvetica Neue",arial,sans-serif;
   font-weight:bold;
   color:#656c6a;
+  white-space: nowrap;
+  width: auto;
+ 
 }
 .comentarios-tecmundo:hover {
   color:#2a2e2e;
@@ -521,9 +533,8 @@ button{
   color:#2a2e2e;
   font-weight: bold;
   display: inline-block;
-  padding: 10px;
+  padding: 10px;;
   border-bottom: 2px solid #288ce4;
-
   
 }
 
@@ -536,16 +547,14 @@ button{
   color:#2a2e2e;
   background-color:white;
 }
-.comentarios{
-  border-bottom: solid 2px #e7e9ee;
-}
+
 .iniciar-sessao{
   float: right;
-  
 }
 .dropdown {
   position: relative;
   display: inline-block;
+  white-space: normal;
 }
 .dropdown-content {
   display: none;
@@ -553,10 +562,11 @@ button{
   background-color: white;
   border:2px solid #687a86;;
   border-radius:3px;
-  z-index: 1;
+  z-index: 1 ;
   padding-top:5px;
   padding-bottom:5px;
    min-width:120px;
+   max-width: 120px;
 }
 .dropdown-content a {
   color: #687a86;
@@ -574,12 +584,78 @@ button{
 .dropdown:hover .dropdown-content {
   display: block;
 }
-/*Fim dos itens de comentário abaixo das reações -------------------------------------------------------------------------------*/
+/*Fim dos itens de comentário 1 abaixo das reações   -------------------------------------------------------------------------------*/
+/*itens de coméntário 2, abaixo das reaçacões */
+.itens{
+  margin:-12px 0px 6px;
+}
+.item{
+  font:13px "Helvetica Neue",arial,sans-serif;
+  display:inline-block;
+  font-weight:bold;
+  white-space: nowrap;
+  width: auto;
+  margin-right: 5px;
+  color:#656c6a;
+  cursor:pointer;
+
+}
+.recomendar-img{
+  color: #f05f70;
+  margin-right:1px;
+  font-size:15px;
+
+}
+
+.mudar-cor:hover{
+  color: #2a2e2e;
+}
+ button .item-text{
+  color:white;
+  margin: 0.5px 0px 0px  4px;
+}
+.twitter button{
+  background-color:#00aced;
+  border:none;
+  
+}
+.facebook button{
+  background-color:#3b5998;
+  border:none;
+}
+.item button:hover{
+  opacity:0.9;
+}
+select{
+  border:none;
+  outline:none;
+}
+.opcao{
+  border:2px solid;
+  border-radius:5px;
+  border-color:#687a86;
+  padding:5px;
+  
+}
+.ordem-comentarios{
+  position:relative;
+  top:10px;
+  float:right;
+}
+.comments-order{
+  position:absolute;
+  right:0;
+}
+.lo{
+  height: 200px;
+
+}
+/*Fim dos itens de comentário 2, abaixo das reações   -------------------------------------------------------------------------------*/
 
 
 
 /*Parte de Relacionados*/
-.relation{
+.rvj{
   color: black;
   font-weight: bold;
   font-size: 24px;
@@ -595,36 +671,49 @@ button{
   width: 100%;
   border-bottom: lightgray 1px solid;
   padding: 16px 0px;
+ 
 }
 
 .text1{
   color:#444444;
   font-size: 18px;
   font-weight: bold;
-  text-decoration: none;
+  
 }
 
 .text1:hover{
   color: #1087ff;
 }
 
+.link_tex{
+  text-decoration: none;
+}
+
+.save{
+  display: inline-block;
+  transform: translateY(-45%);
+  padding-left: 15px;
+  cursor: pointer;
+}
 
 
 .date_rel{
-  position: absolute;
+ 
   color:rgb(186, 186, 196);
   height: 17px;
   font-size: 14px;
+  width: 40px;
   line-height: 120%;
   transform: translateY(-80%);
   text-align: center;
- 
+  display: inline-block;
+  
 }
 
 .days{
-  position: absolute;
+  
   color:rgb(186, 186, 196);
-  padding-right: 10px;
+  padding-right: 15px;
   left: 45px;
   height: 17px;
   line-height: 120%;
@@ -632,6 +721,17 @@ button{
   transform: translateY(-80%);
   border-right: lightgray 1px solid;
   text-align: center;
+  display: inline-block;
+}
+
+
+.redirect{
+  float: right;
+  text-align: center;
+}
+
+.redirect img{
+  border-radius: 10%;
 }
 
 /*Fim dos relacionados----------------------------------------------------------------------------------------------------------------------*/
@@ -640,28 +740,41 @@ button{
 @media only screen and (max-width: 600px){
   body{width: 100%;}
   img{width: 100%;}
-  div{width: 100%;}
+ 
   
+}
+@media only screen and (max-width: 750px){
+  body{width: 100%;}
+  img{width: 100%;}
+ 
+  .comentarios{
+    border-bottom: solid 2px #e7e9ee;
+    white-space: nowrap;
+    clear:both;
+    height: 80px;
+    overflow: visible;
+  }
+
 }
 
 @media only screen and (max-width: 770px){
   body{width: 100%;}
   img{width: 100%;}
-  div{width: 100%;}
   
+
 }
 
 @media only screen and (max-width: 992px){
   body{width: 100%;}
   img{width: 100%;}
-  div{width: 100%;}
+  
   
 }
 
 @media only screen and (max-width: 1200px){
   body{width: 100%;}
   img{width: 100%;}
-  div{width: 100%;}
+ 
 }
 
 
