--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -1,4 +1,4 @@
-﻿.delimeter{/* delimitador da barra com a logo*/
+﻿﻿.delimeter{/* delimitador da barra com a logo*/
   float: none;
 }
 .barra{ /*barra com a logo*/
@@ -154,6 +154,7 @@
     text-align: center;
     color: black;
     box-sizing: border-box;
+   
    }
 
    .save_image:hover{
@@ -163,7 +164,7 @@
    .save_image:active{
     border:  solid 2px;
     border-color:  #1087FF;
-    
+   
    }
 
    .img_share{
@@ -185,7 +186,7 @@
    .img_share:active{
     border: solid 2px;
     border-color:  rgb(82, 164, 245);
-    
+   
   }
 
    .img_share:hover{
@@ -463,7 +464,7 @@ button{
   padding: 5px 10px;
   color: #2a2e2e;
   box-sizing: border-box;
-  
+  outline:none;
 }
 
 
@@ -480,10 +481,12 @@ button{
  
 }
 .btn-secondary:focus{
-  color: #0a9eff;
+  color: #2e87e7;
   background-color:#f2f9ff;
- 
+  border-color:   #2e87e7;
 }
+ 
+
 .reaction img{
   width: 20px;
   height: 20px;
@@ -492,11 +495,7 @@ button{
   animation: mymove 2s infinite; 
 }
 
-.reactions button:active
-{
-  
-  border-color:  #0a9eff; 
-}
+
 @keyframes mymove {
   from {transform:scale(1,1)}
   to {transform:scale(1.5,1.5)}
@@ -651,11 +650,52 @@ select{
 
 }
 /*Fim dos itens de comentário 2, abaixo das reações   -------------------------------------------------------------------------------*/
-
+/*text-area*/
+.text-area img{
+  width:48px;
+  height:48px;
+ 
+ }
+ .text-area{
+   position:relative;
+   
+ }
+ label{
+   position:absolute;
+   top:0;
+  
+ 
+ }
+ textarea {
+   width: 95%;
+   height:44px;
+   padding: 12px 20px;
+   box-sizing: border-box;;
+   border-radius: 4px;
+   border: 2px solid #ccc;
+   background-color: #f8f8f8;
+   resize: none;
+   float:right;
+   font-family:"Helvetica Neue",arial,sans-serif;
+   outline:none;
+   
+  
+ }
+ ::placeholder  {
+   font-size:18px;
+   color: #687a86;
+  }
+  textarea:focus{
+   height: 73px;
+   }
+ 
+ 
+ /*fim do text-area------------------------------------------------------------------------------------------------------------*/
+ 
 
 
 /*Parte de Relacionados*/
-.relation{
+.rvj{
   color: black;
   font-weight: bold;
   font-size: 24px;
@@ -671,36 +711,49 @@ select{
   width: 100%;
   border-bottom: lightgray 1px solid;
   padding: 16px 0px;
+ 
 }
 
 .text1{
   color:#444444;
   font-size: 18px;
   font-weight: bold;
-  text-decoration: none;
+  
 }
 
 .text1:hover{
   color: #1087ff;
 }
 
+.link_tex{
+  text-decoration: none;
+}
+
+.save{
+  display: inline-block;
+  transform: translateY(-45%);
+  padding-left: 15px;
+  cursor: pointer;
+}
 
 
 .date_rel{
-  position: absolute;
+ 
   color:rgb(186, 186, 196);
   height: 17px;
   font-size: 14px;
+  width: 40px;
   line-height: 120%;
   transform: translateY(-80%);
   text-align: center;
- 
+  display: inline-block;
+  
 }
 
 .days{
-  position: absolute;
+  
   color:rgb(186, 186, 196);
-  padding-right: 10px;
+  padding-right: 15px;
   left: 45px;
   height: 17px;
   line-height: 120%;
@@ -708,6 +761,17 @@ select{
   transform: translateY(-80%);
   border-right: lightgray 1px solid;
   text-align: center;
+  display: inline-block;
+}
+
+
+.redirect{
+  float: right;
+  text-align: center;
+}
+
+.redirect img{
+  border-radius: 10%;
 }
 
 /*Fim dos relacionados----------------------------------------------------------------------------------------------------------------------*/
