--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -376,7 +376,7 @@
   }
 .artigo{
   float: none;
-  width:80%;
+  width:90%;
   background-color:white; 
   margin: -20px auto 0px auto;
   padding:  15px ;/*conteudo interno, todo o conteudo sera ajeitado a 15px tanto a direita como esquerda , em cima e embaixo*/
@@ -594,7 +594,7 @@ button{
   cursor:pointer;
 
 }
-.item a:hover{
+.remover-efeito a:hover{
   background-color: white;
 }
 .recomendar-img{
@@ -643,10 +643,7 @@ select{
   position:absolute;
   right:0;
 }
-.lo{
-  height: 200px;
 
-}
 /*Fim dos itens de comentário 2, abaixo das reações   -------------------------------------------------------------------------------*/
 /*text-area*/
 .comment-textarea{
@@ -853,6 +850,7 @@ textarea {
  position:relative;
  left:60px;
  top:20px;
+ width: 20%;
 }
 .begin-session a{
  text-decoration:none;
@@ -925,8 +923,8 @@ textarea {
  opacity: 1;
 }
 
-/* fim Inciar sessão----------------------------------------------------------------------------------------------------------*/
-/* Registrar no discus*/
+/*fim Inciar sessão----------------------------------------------------------------------------------------------------------*/
+/* Registrar no discus*
 .alinhar{
   display:inline-block;
   
@@ -1002,6 +1000,108 @@ textarea {
 }
 .discus-information a:hover{
   background: none;
+}
+
+/* fim Registrar no discus----------------------------------------------------------------------------------------------------------*/
+ /*Registrar no discus*/
+.alinhar{
+  display:inline-block;
+  
+  
+}
+
+.action{
+  position: absolute;
+  top:7px;
+  left:160px;
+}
+.form{
+  position:relative; 
+  left:230px;
+  top:-70px;
+  display: inline-block;
+  width: 80%;
+}
+ .form p{
+  font-size: 11px;
+  color: #687a86;
+  font-weight: 700;
+  margin-bottom:0px;
+
+ }
+ .form span{
+   color:#687a86;
+  font-size: 12px;
+  border-radius: 50%;
+  border:2px solid ;
+  padding: 0px 3px;
+  font-weight: 700;
+ }
+
+  .action:hover .discus-information{
+  display: block;
+}
+ .action button{
+   border:none;
+   padding:2px;
+ }
+ .discus-information {
+  width: 300px;
+  color:#687a86;
+  border: 3px solid #dbdfe4;
+  border-radius: 4px;
+  padding: 1em;
+  background-color: white;
+  position:absolute;
+  top:28px;
+  transform: translateX(-50%); 
+  z-index:1;
+  box-sizing: border-box;
+  display: none;
+ }
+
+  
+
+.discus-information li {
+
+  list-style: disc;
+  margin: 0 0 6px;
+  line-height: 1.4;
+  font-size: 13px;
+  
+}
+
+.discus-information p{
+  font-weight: 700;
+   font-size: 16px;
+   margin: 0px;
+   text-align: center;
+}
+.discus-information button{
+    border: none;
+    width: 100%;
+    background: rgba(29,47,58,.6);
+    padding: 8px ;
+    color:white;
+    line-height: 1.1;
+    border-radius: 3px;
+    font-weight: 500; 
+    text-align: center;
+   
+}
+.discus-information a:hover{
+  background: none;
+}
+input{
+  outline: none;
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+  display: inline-block;
+  border: 2px solid #ccc;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
 
 /* fim Registrar no discus----------------------------------------------------------------------------------------------------------*/
