--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -811,7 +811,7 @@ textarea {
   background-color: #575757;
   color: white;
   position: absolute;
-  left: 1083px;
+  left: 948px;
   width: 250px;
   height: 41px;
   transform: translateY(-31%);
@@ -1280,10 +1280,10 @@ input{
 
 .inst label{
   display: block;
-  padding: 8px 16px;
+  padding: 8px 16px ;
   font-size:18px;
   cursor: pointer;
-  width: 90%;
+  width: 100%;
   position: absolute;
   top: 20px;
   font-weight: bold;
@@ -1351,12 +1351,67 @@ input{
 /*Fim do Institucional--------------------------------------------------------------------------------------------*/
 
 /*Medias para deixar o site responsivo*/
+
+
 @media only screen and (max-width: 600px){
   body{width: 100%;}
   img{width: 100%;}
+
+  .barra2_filho{
+    font-size: 13px;
+    width: 50%;
+  }
   
- 
+  .barra_autor button{
+    width: 40px;
+    height: 38px;
+    overflow: hidden;
+    
+  }
+
+  .share{
+    transform: translateY(-3%);
+  }
+
+
+  .redirect{
+    position: absolute;
+    bottom:10px;
+    right: 10px;
+  }
   
+  .redirect img{
+    height: 60px;
+    width: 48px; 
+  }
+
+  .text1{
+    font-size: 13px;
+  }
+
+  .date_rel{
+    font-size: 13px;
+  }
+
+  .days{
+    font-size:13px;
+  }
+  
+  .text2{
+    font-size: 13px;
+  }
+
+  .pat{
+    font-size: 13px;
+  }
+
+  .inst_sites{
+
+    width: 100%;
+  
+    
+  }
+
 }
 @media only screen and (max-width: 750px){
   body{width: 100%;}
